[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/cloud/lb.png" type="Texture" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/cloud/staticserver.png" type="Texture" id=3]
[ext_resource path="res://assets/cloud/dynamicserver.png" type="Texture" id=4]
[ext_resource path="res://assets/cloud/database.png" type="Texture" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_top = 760.954
margin_right = 1420.0
margin_bottom = 800.954
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNS" type="TextEdit" parent="Panel"]
margin_left = 1102.0
margin_top = 9.0
margin_right = 1246.0
margin_bottom = 33.0
rect_scale = Vector2( 1.00032, 1.03753 )
text = "server_0"
breakpoint_gutter = true
highlight_all_occurrences = true
context_menu_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DNSLabel" type="Label" parent="Panel"]
margin_left = 1009.0
margin_top = 13.0
margin_right = 1098.0
margin_bottom = 27.0
text = "DNS A record:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_LoadBalancer" type="Button" parent="Panel"]
anchor_left = 0.00285492
anchor_top = -0.637859
anchor_right = 0.00285492
anchor_bottom = -0.224
margin_left = 87.946
margin_top = 25.5143
margin_right = 127.946
margin_bottom = 48.96
hint_tooltip = "new load balancer"
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="new_Database" type="Button" parent="Panel"]
anchor_left = 0.0979253
anchor_top = -0.637859
anchor_right = 0.0979253
anchor_bottom = -0.0988586
margin_left = -5.05399
margin_top = 25.5143
margin_right = 34.946
margin_bottom = 43.9543
hint_tooltip = "Database"
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="new_DynamicServer" type="Button" parent="Panel"]
anchor_left = 0.0267986
anchor_top = -0.637859
anchor_right = 0.0267986
anchor_bottom = -0.0988586
margin_left = 11.946
margin_top = 25.5143
margin_right = 51.946
margin_bottom = 43.9543
hint_tooltip = "Dynamic Server
"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="new_StaticServer" type="Button" parent="Panel"]
anchor_top = -0.614
anchor_bottom = -0.024
margin_left = 8.0
margin_top = 24.56
margin_right = 48.0
margin_bottom = 40.96
rect_scale = Vector2( 1, 1.00285 )
hint_tooltip = "Static Server"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Request" type="Button" parent="Panel"]
margin_left = 1272.0
margin_top = 9.15997
margin_right = 1368.0
margin_bottom = 29.16
text = "send request"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoneyLabel" type="Label" parent="Panel"]
margin_left = 721.0
margin_top = 13.0
margin_right = 768.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 40, 2 )
text = "Money:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="Panel"]
margin_left = 777.0
margin_top = 13.0
margin_right = 824.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 40, 2 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearUsers" type="Button" parent="."]
margin_left = 592.0
margin_top = 24.0
margin_right = 674.0
margin_bottom = 44.0
text = "clear users"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="Panel/DNS" to="." method="_on_DNS_text_changed"]
[connection signal="pressed" from="Panel/new_LoadBalancer" to="." method="_on_new_lb_pressed"]
[connection signal="pressed" from="Panel/new_Database" to="." method="_on_new_lb_pressed"]
[connection signal="pressed" from="Panel/new_DynamicServer" to="." method="_on_new_lb_pressed"]
[connection signal="pressed" from="Panel/new_StaticServer" to="." method="_on_new_website_pressed"]
[connection signal="pressed" from="Panel/Request" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ClearUsers" to="." method="_on_ClearUsers_pressed"]
